--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "axios": "^1.7.9",
+    "tslog": "^4.9.3",
     "typescript": "^5.7.2"
   },
   "dependencies": {
