bugfix, parsing topics.json

--- a/config-example.json
+++ b/config-example.json
@@ -2,10 +2,10 @@
 [
   {
     "Topic": "Debugging",
-    "Tone": "Humorous",
+    "Tone": "Humorous"
   },
   {
     "Topic": "Coding late nights",
-    "Tone": "Relatable",
-  },
+    "Tone": "Relatable"
+  }
 ]
