--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.13.19",
+    "cron": "^3.3.0",
     "dotenv": "^16.4.7",
     "node-nlp": "^4.27.0"
   }
