--- a/example.env
+++ b/example.env
@@ -1,7 +1,4 @@
-# Rename this file to .env after filling in the fields with your own values
-
-# The email address you used to sign up for Bsky
-BSKY_HANDLE=
+# Create a copy of this file named .env and fill in the fields with your own values
 
 # Create an app password at https://bsky.social/settings/security
 # DO NOT SHARE WITH ANYONE
@@ -10,8 +7,3 @@ BSKY_TOKEN=
 # Kindroid API key from Kindroid app > Settings > General > API & Advanced integrations
 # DO NOT SHARE WITH ANYONE
 KIN_KEY=
-
-# Kindroid ID from Kindroid app > Settings > General > API & Advanced integrations
-# Make sure you have the Kindroid selected in the Kindroid app that you want to connec to Bsky
-KIN_ID=
-
